external/qt-everywhere-opensource-src-5.8.0/qtxmlpatterns/tests/auto/xmlpatternsdiagnosticsts/TestSuite/Queries/XQuery/ShouldSucceed/succeed-12.xq
xquery version "1.0";
"This query evaluates to arbitrary output", 1, 2, 3
