external/qt-everywhere-opensource-src-5.8.0/qtxmlpatterns/tests/auto/xmlpatternsdiagnosticsts/TestSuite/Queries/XQuery/ShouldFail/fail-15.xq
xquery version "1.0";
fn:error()
